Closed Bug 191965 Opened 23 years ago Closed 23 years ago

Hang when trying to "Save page As..."

Categories

(Core :: Networking, defect, P1)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.3final

People

(Reporter: spam, Assigned: dbaron)

References

()

Details

(Keywords: crash, Whiteboard: [patch])

Attachments

(3 files)

current trunk CVS, Linux I rarely save pages so i don't know if this is new. But reproduced 4 times in a row now. To reproduce: -Go to http://www.vg.no -Click any link called "Les hele saken" and let the following page load -Now click "File" -> "Save Page As..." Filepicer now appears with suggested filename - accept Result: After this the file manager may or may not appear, but Mozilla will regardless freeze only seconds later. The page seems to be saved however. But i have to kill mozilla with -9 ("killall mozilla-bin" alone doesn't work) There must be something special about stories at that site, I can save some other sites OK.
Are you saving as "web page, complete", or "web page, HTML only"? Are you using the download manager, or the progress dialog? When did you pull your build from CVS? ("Does renaming XUL.mfasl help?" ;))
Attached file stacktrace
mozilla.org binary build crashed. Debug build seemed to hang, but it was actually the signal handler which caught the crash and was waiting for me to attach gdb (except there was no indication of that).
>Are you saving as "web page, complete", or "web page, HTML only"? web page, complete >Are you using the download manager, or the progress dialog? download manager (i gave up getting rid of it) >When did you pull your build from CVS? no new checkins since i built >("Does renaming XUL.mfasl help?" ;)) "You wish" ;)
jkeiser? The last part of that before we get into strings looks like HTMLValue code....
Keywords: crash
for this URL: http://vg.transact.no/Item.asp?GroupID=131&Group=Politikk%20-%20Internasjonal&ThreadID=322160&Thread=Nå%20avviser%20Saddam%20USA-bevisene,latterlig%20syns%20jeg! the call to encoder.EncodeSegmentCount(spec,mQuery,esc_Query,encQuery) returns 0 http://lxr.mozilla.org/mozilla/source/netwerk/base/src/nsStandardURL.cpp#494 which is obviously wrong. |buf| is allocated too small and big problems follow. The difference between that and the other URLs (which are handled properly) seems to be the "å". ==> Networking
Status: UNCONFIRMED → NEW
Ever confirmed: true
networking for real
Assignee: asa → dougt
Component: Browser-General → Networking
QA Contact: asa → benc
To darin, ccing nhotta....
Assignee: dougt → darin
should be easy enough to fix... targeting 1.3
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.3beta
These seem relevant: ###!!! ASSERTION: not a UTF8 string: 'Error', file ../../dist/include/string/nsReadableUtils.h, line 447 Break: at file ../../dist/include/string/nsReadableUtils.h, line 447 ###!!! ASSERTION: Input wasn't UTF8 or incorrect length was calculated: 'Error', file /builds/trunk/mozilla/string/obsolete/nsString2.cpp, line 1401 Break: at file /builds/trunk/mozilla/string/obsolete/nsString2.cpp, line 1401 ###!!! ASSERTION: not a UTF8 string: 'Error', file ../../dist/include/string/nsReadableUtils.h, line 447 Break: at file ../../dist/include/string/nsReadableUtils.h, line 447 ###!!! ASSERTION: Input wasn't UTF8 or incorrect length was calculated: 'Error', file /builds/trunk/mozilla/string/obsolete/nsString2.cpp, line 1401 Break: at file /builds/trunk/mozilla/string/obsolete/nsString2.cpp, line 1401
Attached patch patchSplinter Review
This fixes the crash (the first change may not even be needed for this crash). Different error handling in the URL code might be nice, though.
Comment on attachment 113688 [details] [diff] [review] patch ugh. ;)
Attachment #113688 - Flags: superreview+
Attachment #113688 - Flags: review?(adamlock)
Comment on attachment 113688 [details] [diff] [review] patch Nice catch, r=adamlock I think we have other bugs about saving to international filenames. I'll see if they're still open.
Attachment #113688 - Flags: review?(adamlock) → review+
-> dbaron :)
Assignee: darin → dbaron
Status: ASSIGNED → NEW
bugs like this one make me wonder why we even still have AssignWithConversion, is there a special reason?
Because people get mad when we make too many string API changes, and we don't really have the "right solution" for conversion ready yet...
Comment on attachment 113688 [details] [diff] [review] patch Let's hold off until final.
Attachment #113688 - Flags: approval1.3b? → approval1.3b-
Comment on attachment 113688 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to 1.3final.
Attachment #113688 - Flags: approval1.3? → approval1.3+
Fix checked in to trunk, 2003-02-11 12:28 PST.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.3beta → mozilla1.3final
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: