Fix hang when saving pages with non-ASCII characters in URLs.  b=191965  r=adamlock  sr=bzbarsky  a=asa