embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp
@@ -2865,7 +2865,7 @@ nsWebBrowserPersist::StoreURIAttribute(
         attrNode->GetNodeValue(oldValue);
         if (!oldValue.IsEmpty())
         {
-            nsCAutoString oldCValue; oldCValue.AssignWithConversion(oldValue);
+            NS_ConvertUCS2toUTF8 oldCValue(oldValue);
             return StoreURI(oldCValue.get(), aNeedsPersisting, aData);
         }
     }
@@ -2995,7 +2995,7 @@ nsWebBrowserPersist::FixupAnchor(nsIDOMNode *aNode)
     {
         nsString oldValue;
         attrNode->GetNodeValue(oldValue);
-        nsCString oldCValue; oldCValue.AssignWithConversion(oldValue);
+        NS_ConvertUCS2toUTF8 oldCValue(oldValue);
 
         // Skip empty values and self-referencing bookmarks
         if (oldCValue.IsEmpty() || oldCValue.CharAt(0) == '#')
